# cryptoscan

./: bun.lockb  package.json
src/: App.vue  main.js
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/migrations/: 1708352539777_init.sql  1708941525_settings.sql
src-tauri/src/: config.rs  fetch.rs  lib.rs  main.rs
src-tauri/src/domain/: coin.rs  create_coin.rs  delete_coin.rs  find_coin.rs  get_all_coins.rs  mod.rs  update_coin.rs
src-tauri/src/domain/coin/: create_coin.rs  delete_coin.rs  find_coin.rs  get_all_coins.rs  mod.rs  update_coin.rs
src-tauri/src/domain/settings/: create_setting.rs  find_setting.rs  mod.rs  settings.rs
src-tauri/src/driven/repository/: mod.rs  sqlite.rs
src-tauri/src/driving/: mod.rs
src-tauri/src/driving/tauri/: coins.rs  errors.rs  mod.rs  settings.rs
src/components/: CoinCard.vue
src/components/dialogs/: AddCoinDialog.vue  ChooseCoinsDialog.vue  SetTokenDialog.vue
