[package]
name = "cryptoscan"
version = "0.0.0"
description = "A Tauri App"
authors = ["Serhii Dubetskyi <serhiidubetskyi@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cryptoscan_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
reqwest = { version = "0.11.24", default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
tauri = { version = "2.0.0-beta.6", features = [] }
tauri-plugin-log =  "2.0.0-beta.1"
tauri-plugin-shell = "2.0.0-beta.1"
tauri-plugin-store = "2.0.0-beta.1"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["rt"] }
validator = { version = "0.16.1", features = ["derive"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
